# flightSimulator

./: BinaryExpression.cpp  BinaryExpression.h  CMakeLists.txt  Command.cpp  Command.h  CommandExpression.cpp  CommandExpression.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.cpp  ConnectCommand.h  DataReaderServer.cpp  DataReaderServer.h  DataSetClient.cpp  DataSetClient.h  Divide.cpp  Divide.h  EntercCommand.cpp  EntercCommand.h  Expression.cpp  Expression.h  IfCondition.cpp  IfCondition.h  LoopCondition.cpp  LoopCondition.h  Minus.cpp  Minus.h  Multiply.cpp  Multiply.h  Number.cpp  Number.h  OpenServerCommand.cpp  OpenServerCommand.h  ParseUtils.cpp  ParseUtils.h  Plus.cpp  Plus.h  PrintCommand.cpp  PrintCommand.h  ShuntingYard.cpp  (+22 more)
